Added new images in urdu and maths

--- a/2maths.html
+++ b/2maths.html
@@ -75,15 +75,8 @@
       margin-top: 2rem;
     }
   </style>
+    </style>
 </head>
-<body>
-
-  <header>
-    <h2>📐 Maths – Fair Book</h2>
-  </header>
-
- <section class="gallery">
-    <div class="card">
       <img src="maths fair book/26.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 26">
       <div class="caption">Page 26</div>
     </div>
@@ -91,6 +84,22 @@
   <section class="gallery">
     <div class="card">
       <img src="maths fair book/27.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 27">
+    <div class="card">
+      <img src="maths fair book/46.jpeg" alt="Maths Fair Book Page 46" loading="lazy" />
+      <div class="caption">Page 46</div>
+    </div>
+    <div class="card">
+      <img src="maths fair book/47.jpeg" alt="Maths Fair Book Page 47" loading="lazy" />
+      <div class="caption">Page 47</div>
+    </div>
+    <div class="card">
+      <img src="maths fair book/48.jpeg" alt="Maths Fair Book Page 48" loading="lazy" />
+      <div class="caption">Page 48</div>
+    </div>
+    <div class="card">
+      <img src="maths fair book/49.jpeg" alt="Maths Fair Book Page 49" loading="lazy" />
+      <div class="caption">Page 49</div>
+    </div>
       <div class="caption">Page 27</div>
     </div>
   </section>
@@ -201,12 +210,27 @@
   </section>
     </section>
     <section class="gallery">
-    <div class="card">
-      <img src="maths fair book/45.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 45">
-      <div class="caption">Page 45</div>
-    </div>
-  </section>
-  
+      <div class="card">
+        <img src="maths fair book/45.jpeg"  loading="lazy" class="lazy-img"  alt="Maths Page 45">
+        <div class="caption">Page 45</div>
+      </div>
+      <div class="card">
+        <img src="maths fair book/46.jpeg" alt="Maths Fair Book Page 46" loading="lazy" />
+        <div class="caption">Page 46</div>
+      </div>
+      <div class="card">
+        <img src="maths fair book/47.jpeg" alt="Maths Fair Book Page 47" loading="lazy" />
+        <div class="caption">Page 47</div>
+      </div>
+      <div class="card">
+        <img src="maths fair book/48.jpeg" alt="Maths Fair Book Page 48" loading="lazy" />
+        <div class="caption">Page 48</div>
+      </div>
+      <div class="card">
+        <img src="maths fair book/49.jpeg" alt="Maths Fair Book Page 49" loading="lazy" />
+        <div class="caption">Page 49</div>
+      </div>
+    </section>
 
     <a href="index.html" class="back-btn">← Back to Home</a>
 
