--- a/urdu.html
+++ b/urdu.html
@@ -81,7 +81,6 @@
   <header>
     <h2>🔖 Urdu – Fair Book</h2>
   </header>
-
   <section class="gallery">
     <div class="card">
       <img src="Urdu fair book/1.jpeg"  loading="lazy" class="lazy-img"  alt="Page 1">
@@ -170,6 +169,24 @@
     <div class="card">
       <img src="Urdu fair book/15.jpeg"  loading="lazy" class="lazy-img"  alt="Page 15">
       <div class="caption">Page 15</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="Urdu fair book/16.jpeg" alt="Urdu Fair Book Page 16" loading="lazy" />
+      <div class="caption">Page 16</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="Urdu fair book/17.jpeg" alt="Urdu Fair Book Page 17" loading="lazy" />
+      <div class="caption">Page 17</div>
+    </div>
+  </section>
+  <section class="gallery">
+    <div class="card">
+      <img src="Urdu fair book/18.jpeg" alt="Urdu Fair Book Page 18" loading="lazy" />
+      <div class="caption">Page 18</div>
     </div>
   </section>
   <br>
